Fix buttons of different sizes and weird alignment on Sensei Pro Ad

--- a/assets/home/sections/sensei-pro-ad.scss
+++ b/assets/home/sections/sensei-pro-ad.scss
@@ -102,12 +102,14 @@
 			margin-top: 27px;
 
 			&.is-primary {
-				max-width: 142px;
+				margin-right: 18px;
+			}
+
+			&.is-primary, &.is-secondary {
+				width: 142px;
 			}
 
 			&.is-secondary {
-				margin-left: 18px;
-				max-width: 120px;
 				--wp-admin-theme-color: #{$gray-10};
 				box-shadow: inset 0 0 0 1px var(--wp-admin-theme-color);
 			}
